--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
     <section class="nav">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa-solid fa-bars"></i>
-      </button>
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
         <a class="logo link two" href="#">Pokoje w lesie</a>
         <a class="link two" href="#rooms">Oferta</a>
         <a class="link two" href="#gallery">Galeria</a>
@@ -108,10 +108,35 @@
 
 
         </div>
+        <div class="custom-shape-divider-bottom-1696626052">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
     </section>
-    <section class="contact">
+    <section id="contact" class="contact">
+        <div class="wrapper">
+            <p class="title">Kontakt</p>
+            <div class="contact-info-box">
+                <div class="contact-p">
+                    <p>Adres: Bagienko 5, 14-140 Miłomłyn</p>
+                    <p> E-Mail: magjar2@o2.pl</p>
+                    <p>Numer telefonu: +48 602 323 597</p>
+                    <p>Do rezerwacji pokoi zapraszamy także za pośrednictwem booking:</p>
+                    <div class="buttons-contact">
+                        <a href="https://www.booking.com/hotel/pl/pokoje-w-lesie.pl.html" target="_blank"><button><i class="fa-solid fa-house-chimney"></i>Pokoje w lesie | Booking</button></a>
+                    </div>
+                </div>
 
-
+                <div class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2358.8065010947244!2d19.882666999999998!3d53.75732850000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471d615c7d7ed591%3A0xb70ff6db5fdec229!2sBagie%C5%84sko%205%2C%2014-140%20Bagie%C5%84sko!5e0!3m2!1spl!2spl!4v1696626889212!5m2!1spl!2spl"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
+            <div>
 
     </section>
 
