--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <p>Numer telefonu: +48 602 323 597</p>
                     <p>Do rezerwacji pokoi zapraszamy także za pośrednictwem booking:</p>
                     <div class="buttons-contact">
-                        <a href="https://www.booking.com/hotel/pl/pokoje-w-lesie.pl.html" target="_blank"><button><i class="fa-solid fa-house-chimney"></i>Pokoje w lesie | Booking</button></a>
+                        <a href="https://www.booking.com/hotel/pl/pokoje-w-lesie.pl.html" target="_blank"><button><i class="fa-solid fa-house-chimney"></i>Pokoje w lesie | Booking.com</button></a>
                     </div>
                 </div>
 
