--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <i class="fa-solid fa-bars"></i>
         </button>
         <a class="logo link two" href="#">Pokoje w lesie</a>
+        <a class="link two" href="#about-us">O nas</a>
         <a class="link two" href="#rooms">Oferta</a>
         <a class="link two" href="#gallery">Galeria</a>
-        <a class="link two" href="#">Kontakt</a>
+        <a class="link two" href="#contact">Kontakt</a>
     </section>
     <header class="heading">
         <div class="wrapper">
@@ -48,6 +49,65 @@
             </svg>
         </div>
     </header>
+
+    <section id="about-us" class="about-us">
+        <div class="wrapper">
+            <p class="title">O nas</p>
+            <div class="text-about-us">
+                <p>Zapraszamy państwa na odpoczynek wśród lasów i jezior. Obiekt jest położony na leśnej polanie
+                    około 200m od leśniczówki i 800m od trasy E7.
+                    Pokoje gościnne znajdują się na piętrze samodzielnego budynku oraz na parterze w drugim budynku
+                    stodoły. Teren wokół domu jest ogrodzony i zamykany. Na terenie działki znajduje się wiata grillowa,
+                    miejsce
+                    na ognisko, plac zabaw z trampolin oraz boisko do gry w badmintona czy siatkówkę .
+                    Okolica jest bardzo malownicza zachęcająca do wycieczek rowerowych (rowery można u nas
+                    bezpłatnie wypożyczyć). Lasy bogate w jagody i grzyby .W pobliżu domu czasem można
+                    zaobserwować różne dzikie zwierzęta.
+                    Nasze gospodarstwo leży w pobliżu trasy S7 między Warszawą, a Gdańskiem stanowi to doskonałe
+                    miejsce wypadowe do zwiedzanie okolicznych atrakcji przy jednoczesnym odpoczynku w spokojnym
+                    miejscu.</p>
+                <p> Pobliskie atrakcje to:
+                    W pobliżu domu znajduje się również leśne jeziorko z własną kładką.
+                    Najbliższe miasteczko - Miłomłyn leży w odległości 3 km. Do plaży nad jeziorem Ilsko jest około 3km
+                    Miłomłyn to urokliwe miasteczko dostępem do Kanału Ostródzko-Elbląskiego. W pobliżu plaży
+                    znajduje się też tężnia solankowa i ścieżka uzdrowiskowa.
+                    W okolicy Miłomłyna płożony jest Zamek Karnity ostoja dzikiej zwierzyny, gdzie można podziwiać z
+                    bliska sarny, jelenie i daniele oraz miło spędzić czas z rodziną.</p>
+                <p>W miejscowości Buczyniec można odbyć rejs „Statkiem po trawie” na kanale Elbląskim
+                    Do Ostródy dojazd zajmuje 10 minut są tam wyciąg nart wodnych, Aquapark, kręgielnia oraz wiele
+                    restauracji i barów gdzie można smacznie zjeść. W Ostródzie odbywają się też koncerty i festiwale. W
+                    Odległości do godziny jazdy samochodem można też zwiedzić Skansen w Olsztynku , Olsztyn, Zamek
+                    w Malborku, Trójmiasto, Frombork , Elbląg , Nidzica itd.
+                    Na miejscu udostępniamy kontakt do osób organizujących naukę jazdy konnej czy spływy kajakowe
+                    po kanale Elbląskim.
+                    Jeżeli lubią państwo ciszę i świeże powietrze serdecznie zapraszamy.</p>
+            </div>
+
+            <h3>W ofercie:</h3>
+            <div class="offer">
+                <p><i class="fa-solid fa-burger"></i><br><br> Sprzęt do grill</p>
+                <p><i class="fa-solid fa-wifi"></i><br><br> Bezpłatne Wi-Fi</p>
+                <p><i class="fa-brands fa-pagelines"></i><br><br> Ogród</p>
+                <p><i class="fa-solid fa-car-side"></i><br><br> Bezpłatny parking</p>
+                <p><i class="fa-solid fa-fish"></i><br><br> Wędkowanie</p>
+                <p><i class="fa-solid fa-person-hiking"></i><br><br> Piesze wycieczki</p>
+                <p><i class="fa-solid fa-person-biking"></i><br><br> Wynajem rowerów</p>
+                <p><i class="fa-solid fa-temperature-arrow-up"></i><br><br> Ogrzewanie</p>
+                <p><i class="fa-brands fa-free-code-camp"></i><br><br> Miejsce na ognisko</p>
+            </div>
+
+
+        </div>
+        <div class="custom-shape-divider-bottom-1696684256">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </section>
+
 
     <section id="rooms" class="rooms">
         <div class="wrapper">
@@ -96,17 +156,34 @@
     <section id="gallery" class="gallery">
         <p class="title">Galeria</p>
         <div class="fade">
-            <div><img class="slice-photo slider-item"
-                    src="https://plus.unsplash.com/premium_photo-1677542200557-3c6856cc98b1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2944&q=80"
-                    alt=""></div>
-            <div><img class="slice-photo slider-item"
-                    src="https://images.unsplash.com/photo-1561037404-61cd46aa615b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2940&q=80"
-                    alt=""></div>
-            <div><img class="slice-photo slider-item"
-                    src="https://images.unsplash.com/photo-1477884213360-7e9d7dcc1e48?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2560&q=80"
-                    alt=""></div>
-
-
+            <div><img class="slice-photo slider-item" src="./img/gallery/1.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/2.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/3.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/4.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/5.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/6.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/7.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/8.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/9.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/10.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/11.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/12.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/13.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/14.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/15.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/16.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/17.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/18.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/19.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/20.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/21.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/22.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/23.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/24.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/26.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/27.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/28.jpg" alt=""></div>
+            <div><img class="slice-photo slider-item" src="./img/gallery/29.jpg" alt=""></div>
         </div>
         <div class="custom-shape-divider-bottom-1696626052">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
@@ -117,6 +194,9 @@
             </svg>
         </div>
     </section>
+
+
+
     <section id="contact" class="contact">
         <div class="wrapper">
             <p class="title">Kontakt</p>
@@ -127,7 +207,8 @@
                     <p>Numer telefonu: +48 602 323 597</p>
                     <p>Do rezerwacji pokoi zapraszamy także za pośrednictwem booking:</p>
                     <div class="buttons-contact">
-                        <a href="https://www.booking.com/hotel/pl/pokoje-w-lesie.pl.html" target="_blank"><button><i class="fa-solid fa-house-chimney"></i>Pokoje w lesie | Booking.com</button></a>
+                        <a href="https://www.booking.com/hotel/pl/pokoje-w-lesie.pl.html" target="_blank"><button><i
+                                    class="fa-solid fa-house-chimney"></i>Pokoje w lesie | Booking.com</button></a>
                     </div>
                 </div>
 
@@ -137,8 +218,21 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             </div>
             <div>
-
+                <div class="custom-shape-divider-bottom-1696684842">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                        preserveAspectRatio="none">
+                        <path
+                            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                            class="shape-fill"></path>
+                    </svg>
+                </div>
     </section>
+
+    <footer>
+        <p>Jako autor powyższej strony internetowej jestem chętny do współpracy. Zapraszam do kontaktu pod adresem email
+            <span><i class="fa-solid fa-envelope"></i> jzawadzki200@gmail.com</span> &#x2122;
+        </p>
+    </footer>
 
 
 
