--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://kit.fontawesome.com/36b88b7451.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Pokoje w lesie | Bagieńsko</title>
 </head>
@@ -36,8 +37,8 @@
         <div class="wrapper">
             <div class="hero-bg">
                 <div class="hero-shadow"></div>
-                <h1>Pokoje w lesie</h1>
-                <h3>Odpoczynek wśród lasów i jezior</h3>
+                <h1 data-aos="fade-up" data-aos-duration="1500">Pokoje w lesie</h1>
+                <h3 data-aos="fade-up" data-aos-duration="1500">Odpoczynek wśród lasów i jezior</h3>
             </div>
         </div>
         <div class="custom-shape-divider-bottom-1696514304">
@@ -52,9 +53,9 @@
 
     <section id="about-us" class="about-us">
         <div class="wrapper">
-            <p class="title">O nas</p>
+            <p data-aos="fade-up" data-aos-duration="1500" class="title">O nas</p>
             <div class="text-about-us">
-                <p>Zapraszamy państwa na odpoczynek wśród lasów i jezior. Obiekt jest położony na leśnej polanie
+                <p data-aos="fade-up" data-aos-duration="1500">Zapraszamy państwa na odpoczynek wśród lasów i jezior. Obiekt jest położony na leśnej polanie
                     około 200m od leśniczówki i 800m od trasy E7.
                     Pokoje gościnne znajdują się na piętrze samodzielnego budynku oraz na parterze w drugim budynku
                     stodoły. Teren wokół domu jest ogrodzony i zamykany. Na terenie działki znajduje się wiata grillowa,
@@ -66,14 +67,14 @@
                     Nasze gospodarstwo leży w pobliżu trasy S7 między Warszawą, a Gdańskiem stanowi to doskonałe
                     miejsce wypadowe do zwiedzanie okolicznych atrakcji przy jednoczesnym odpoczynku w spokojnym
                     miejscu.</p>
-                <p> Pobliskie atrakcje to:
+                <p data-aos="fade-up" data-aos-duration="1500"> Pobliskie atrakcje to:
                     W pobliżu domu znajduje się również leśne jeziorko z własną kładką.
                     Najbliższe miasteczko - Miłomłyn leży w odległości 3 km. Do plaży nad jeziorem Ilsko jest około 3km
                     Miłomłyn to urokliwe miasteczko dostępem do Kanału Ostródzko-Elbląskiego. W pobliżu plaży
                     znajduje się też tężnia solankowa i ścieżka uzdrowiskowa.
                     W okolicy Miłomłyna płożony jest Zamek Karnity ostoja dzikiej zwierzyny, gdzie można podziwiać z
                     bliska sarny, jelenie i daniele oraz miło spędzić czas z rodziną.</p>
-                <p>W miejscowości Buczyniec można odbyć rejs „Statkiem po trawie” na kanale Elbląskim
+                <p data-aos="fade-up" data-aos-duration="1500">W miejscowości Buczyniec można odbyć rejs „Statkiem po trawie” na kanale Elbląskim
                     Do Ostródy dojazd zajmuje 10 minut są tam wyciąg nart wodnych, Aquapark, kręgielnia oraz wiele
                     restauracji i barów gdzie można smacznie zjeść. W Ostródzie odbywają się też koncerty i festiwale. W
                     Odległości do godziny jazdy samochodem można też zwiedzić Skansen w Olsztynku , Olsztyn, Zamek
@@ -83,17 +84,17 @@
                     Jeżeli lubią państwo ciszę i świeże powietrze serdecznie zapraszamy.</p>
             </div>
 
-            <h3>W ofercie:</h3>
+            <h3>W pakiecie:</h3>
             <div class="offer">
-                <p><i class="fa-solid fa-burger"></i><br><br> Sprzęt do grill</p>
-                <p><i class="fa-solid fa-wifi"></i><br><br> Bezpłatne Wi-Fi</p>
-                <p><i class="fa-brands fa-pagelines"></i><br><br> Ogród</p>
-                <p><i class="fa-solid fa-car-side"></i><br><br> Bezpłatny parking</p>
-                <p><i class="fa-solid fa-fish"></i><br><br> Wędkowanie</p>
-                <p><i class="fa-solid fa-person-hiking"></i><br><br> Piesze wycieczki</p>
-                <p><i class="fa-solid fa-person-biking"></i><br><br> Wynajem rowerów</p>
-                <p><i class="fa-solid fa-temperature-arrow-up"></i><br><br> Ogrzewanie</p>
-                <p><i class="fa-brands fa-free-code-camp"></i><br><br> Miejsce na ognisko</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-solid fa-burger"></i><br><br> Sprzęt do grill</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-solid fa-wifi"></i><br><br> Bezpłatne Wi-Fi</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-brands fa-pagelines"></i><br><br> Ogród</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-solid fa-car-side"></i><br><br> Bezpłatny parking</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-solid fa-fish"></i><br><br> Wędkowanie</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-solid fa-person-hiking"></i><br><br> Piesze wycieczki</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-solid fa-person-biking"></i><br><br> Wynajem rowerów</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-solid fa-temperature-arrow-up"></i><br><br> Ogrzewanie</p>
+                <p data-aos="fade-up" data-aos-duration="1500"><i class="fa-brands fa-free-code-camp"></i><br><br> Miejsce na ognisko</p>
             </div>
 
 
@@ -111,7 +112,7 @@
 
     <section id="rooms" class="rooms">
         <div class="wrapper">
-            <p class="title">Oferta</p>
+            <p data-aos="fade-up" data-aos-duration="1500" class="title">Oferta</p>
             <div class="rooms-boxes">
                 <div class="rooms-block rooms1">
                     <div class="div-text">
@@ -154,8 +155,8 @@
     </section>
 
     <section id="gallery" class="gallery">
-        <p class="title">Galeria</p>
-        <div class="fade">
+        <p data-aos="fade-up" data-aos-duration="1500" class="title">Galeria</p>
+        <div data-aos="fade-up" data-aos-duration="1500" class="fade">
             <div><img class="slice-photo slider-item" src="./img/gallery/1.jpg" alt=""></div>
             <div><img class="slice-photo slider-item" src="./img/gallery/2.jpg" alt=""></div>
             <div><img class="slice-photo slider-item" src="./img/gallery/3.jpg" alt=""></div>
@@ -199,9 +200,9 @@
 
     <section id="contact" class="contact">
         <div class="wrapper">
-            <p class="title">Kontakt</p>
+            <p data-aos="fade-up" data-aos-duration="1500" class="title">Kontakt</p>
             <div class="contact-info-box">
-                <div class="contact-p">
+                <div data-aos="fade-up" data-aos-duration="1500" class="contact-p">
                     <p>Adres: Bagienko 5, 14-140 Miłomłyn</p>
                     <p> E-Mail: magjar2@o2.pl</p>
                     <p>Numer telefonu: +48 602 323 597</p>
@@ -212,7 +213,7 @@
                     </div>
                 </div>
 
-                <div class="map"><iframe
+                <div data-aos="fade-up" data-aos-duration="1500" class="map"><iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2358.8065010947244!2d19.882666999999998!3d53.75732850000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471d615c7d7ed591%3A0xb70ff6db5fdec229!2sBagie%C5%84sko%205%2C%2014-140%20Bagie%C5%84sko!5e0!3m2!1spl!2spl!4v1696626889212!5m2!1spl!2spl"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe></div>
@@ -229,7 +230,7 @@
     </section>
 
     <footer>
-        <p>Jako autor powyższej strony internetowej jestem chętny do współpracy. Zapraszam do kontaktu pod adresem email
+        <p >Jako autor powyższej strony internetowej jestem chętny do współpracy. Zapraszam do kontaktu pod adresem email
             <span><i class="fa-solid fa-envelope"></i> jzawadzki200@gmail.com</span> &#x2122;
         </p>
     </footer>
@@ -240,6 +241,10 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="js/slide.js"></script>
     <script src="js/main.js"></script>
 </body>
